--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
 	margin-bottom:30px;
 }
 
+#intro{
+	text-align: center;
+}
+
 .background{
 	background-color:yellow;
 }
@@ -33,12 +37,20 @@
 
 }
 
-.btn{
+#mainBtn{
 	height:50px;
 	vertical-align:middle;
 	display:inline;
 	margin-left: 10px;
 
+}
+
+#introBtn{
+	height:200px;
+	width:600px;
+	margin-top: 50px;
+	font-size: 110px;
+	
 }
 
 .word{
@@ -48,3 +60,4 @@
 	font-weight: bold;
 
 }
+
