--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 #title{
 	text-align: center;
 	font-size:100px;
-	font-family: monospace;
+	font-family: cursive;
 	margin-top:50px;
 	margin-bottom:30px;
 }
@@ -11,7 +11,7 @@
 }
 
 .background{
-	background-color:yellow;
+	background-color:#dcdcbf;
 }
 
 .input{
@@ -50,7 +50,13 @@
 	width:600px;
 	margin-top: 50px;
 	font-size: 110px;
-	
+}
+
+#endBtn{
+	height:100px;
+	width:500px;
+	margin-top: 50px;
+	font-size: 50px;
 }
 
 .word{
@@ -73,4 +79,16 @@
 	font-size:50px;
 	margin-top:30px;
 	margin-bottom:30px;
+}
+
+#end{
+	text-align: center;
+	font-size:50px;
+	margin-top:30px;
+	margin-bottom:30px;
+}
+
+#own{
+	text-align: center;
+	margin-top:20%;
 }
